<resources>
    <string name="app_name">My Planet</string>
    <string name="newString">Hola Yuri</string>
    <string name="valbtnSuscribirse">Suscribirse</string>
    <string name="valbtnSiguiente">Siguiente</string>
    <string name="valbtnEnviar">Enviar</string>
    <string name="valbtnSalir">Salir</string>
    <string name="valbtnLogin">Login</string>
    <string name="valbtnCreateVoluntario">Create Account</string>
    <string name="valbtnCreateAuspiciador">Create Account</string>

    <string name="valtxtNombre"></string>
    <string name="valtxtApellido"></string>
    <string name="valtxtPais"></string>
    <string name="valtxtFecha"></string>
    <string name="valtxtDNI"></string>

    <string name="valtxtEmail"></string>
    <string name="valtxtEmailloginV">Email de Voluntario</string>
    <string name="valtxtEmailloginA">Email de Auspiciador</string>

    <string name="valtxtPassword"></string>
    <string name="valtxtPasswordloginV">Password de Voluntario</string>
    <string name="valtxtPasswordloginA">Password de Auspiciador</string>

    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otros</item>
    </string-array>
    <string-array name="Discapadidad">
        <item>Si tengo discapacidad</item>
        <item>No tengo discapacidad</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtxtDireccion" />
    <string name="valtxtUbigeo" />
    <string name="valtxtNumero" />
    <string name="valtxtOcupacion" />
    <string name="valtxtComentario"></string>

    <string name="valtxtFelicidades">Felicidades!
    El registro fue exitoso</string>
    <string name="apellidos">Apellidos</string>
    <string name="pais">Pais</string>
    <string name="nombres">Nombre Completo</string>
    <string name="fecha_de_nacimiento">Fecha de Nac: dd/mm/yyyy</string>
    <string name="dni">DNI</string>

    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>