<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistroVoluntario.FragmentDatos2">

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valbtnEnviar"
        android:textColorHighlight="#4CAF50"
        app:iconTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        app:strokeColor="#4CAF50" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Dirección"
        android:inputType="textPersonName"
        android:text="@string/valtxtDireccion"
        android:textColor="#0B0B0B"
        android:textColorHint="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtUbigeo"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Ubigeo"
        android:inputType="textPersonName"
        android:text="@string/valtxtUbigeo"
        android:textColor="#0B0B0B"
        android:textColorHint="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtNumero"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Nro de Celular"
        android:inputType="textPersonName"
        android:text="@string/valtxtNumero"
        android:textColor="#0B0B0B"
        android:textColorHint="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtOcupacion"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Ocupación"
        android:inputType="textPersonName"
        android:text="@string/valtxtOcupacion"
        android:textColor="#0B0B0B"
        android:textColorHint="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtOcupacion2"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="¿Cómo se enteró del voluntariado?"
        android:inputType="textPersonName"
        android:text="@string/valtxtComentario"
        android:textColor="#0B0B0B"
        android:textColorHint="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spnSexo"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <Spinner
        android:id="@+id/spnDiscapacidad"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />
</androidx.constraintlayout.widget.ConstraintLayout>